--- a/index.html
+++ b/index.html
@@ -472,17 +472,17 @@ I’m glad you made it.
 
 This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Check out my contact info and projects below.
 </p>
-	  <ul style="margin: 5px;position: relative; color:black; font-weight: bold; text-decoration: none;" >
- 	    	<li><a href="tel:+17073423998">+17073423998</a></li>
-                <li><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></li>
-                <li><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></li>
-                <li><a href="https://github.com/johnbernad6">github.com/johnbernad6</a></li>
-		<li><a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a></li>
-           	<li><a href="https://apps.apple.com/us/app/pinoy-poker/id6461049438" download>Try my free game on the app store</a></li>
-		<li><a href="https://johnbernad6server-b837q.ondigitalocean.app/Menu"> Check out this project i'm currently working on.</a></li>
-		 
-        </ul>
-	
+
+<ul style="margin: 5px; position: relative; color: black; font-weight: bold; text-decoration: none;">
+    <li style="color: white; text-decoration: none;"><a href="tel:+17073423998">+17073423998</a></li>
+    <li style="color: white; text-decoration: none;"><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></li>
+    <li style="color: white; text-decoration: none;"><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></li>
+    <li style="color: white; text-decoration: none;"><a href="https://github.com/johnbernad6">github.com/johnbernad6</a></li>
+    <li style="color: white; text-decoration: none;"><a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a></li>
+    <li style="color: white; text-decoration: none;"><a href="https://apps.apple.com/us/app/pinoy-poker/id6461049438" download>Try my free game on the app store</a></li>
+    <li style="color: white; text-decoration: none;"><a href="https://johnbernad6server-b837q.ondigitalocean.app/Menu">Check out this project I'm currently working on.</a></li>
+</ul>
+
 </div>
   
 
